--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/ramen.html" target= "blank">Ramen Recipe</a></li>
-      <li><a href="./recipes/Ramsay_Eggs.html" target= "blank"> Ramsay Eggs</a></li>
+      <li><a href="./recipes/ramen.html">Ramen Recipe</a></li>
+      <li><a href="./recipes/Ramsay_Eggs.html"> Ramsay Eggs</a></li>
+      <li><a href="./recipes/grilled_cheese.html">Grilled Cheese</a></li>
     </ul>
       
     
