Added a fourth recipe to index
    added a recipe for check on learning and added that web page to my index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="./recipes/ramen.html">Ramen Recipe</a></li>
       <li><a href="./recipes/Ramsay_Eggs.html"> Ramsay Eggs</a></li>
       <li><a href="./recipes/grilled_cheese.html">Grilled Cheese</a></li>
+      <li><a href="./recipes/checkonlearning.html">Check on Learning</a></li>
     </ul>
       
     
